--- a/Cram/client/src/styles/auth.css
+++ b/Cram/client/src/styles/auth.css
@@ -2,7 +2,8 @@ body {
     margin:0;
     padding:0;
     overflow: hidden;
-    background-image: url("https://i.imgur.com/YzJWB8I.png");
+    /* background-color: red; */
+    background-image: url("https://i.imgur.com/YzJWB8I.png") !important;
     background-repeat: repeat;
     background-size: 100px;
 }
