--- a/Cram/client/src/styles/deck.module.css
+++ b/Cram/client/src/styles/deck.module.css
@@ -3,10 +3,11 @@
 }
 
 body {
-    background-image: none;
+    background-image: none !important;
 }
 main {
     padding: 10px 40px;
+    background-color: white;
 }
 
 
@@ -47,5 +48,34 @@ table {
     margin-top: 13px;
     border-top: 2px black solid;
     width: 100%;
+    border-collapse: collapse;
 }
 
+/* table {
+    border-collapse: collapse;
+    width: 100%;
+} */
+
+th {
+    background-color: #f8f8f8;
+    border-bottom: 1px solid rgb(230 230 230);
+    color: rgb(188 188 188);
+    height: 37px;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+th, td {
+    text-align: left;
+}
+
+th {
+    padding: 0 5px
+}
+
+td {
+    padding: 8px;
+}
+
+tr:nth-child(odd) {background-color: #f8f8f8;}
