--- a/Cram/client/src/styles/deck.module.css
+++ b/Cram/client/src/styles/deck.module.css
@@ -3,10 +3,10 @@
 }
 
 body {
-    background-image: none !important;
+    background-image: none;
 }
 main {
-    padding: 10px 40px;
+    padding: 30px;
     background-color: white;
 }
 
@@ -20,7 +20,7 @@ h1 {
 h2 {
     font-size: 15px;
     color: rgb(51 51 51);
-    font-weight: 500;
+    font-weight: 900;
     margin: 0;
     padding: 0;
 }
@@ -35,13 +35,13 @@ h2 {
 button {
     border: none;
     background-color: white;
-    color: #00a82d;
+    color: #792399;
     font-size: 14px;
     font-weight: 500;
 }
 
 button:hover {
-    color: #00c033;
+    color: #b134df;
 }
 
 table {
@@ -57,9 +57,10 @@ table {
 } */
 
 th {
-    background-color: #f8f8f8;
+    background-color: #f8e4f8;
     border-bottom: 1px solid rgb(230 230 230);
-    color: rgb(188 188 188);
+    /* color: rgb(188 188 188); */
+    color: rgb(48, 48, 48);
     height: 37px;
     font-size: 11px;
     font-weight: 400;
@@ -78,4 +79,5 @@ td {
     padding: 8px;
 }
 
-tr:nth-child(odd) {background-color: #f8f8f8;}
+/* tr:nth-child(odd) {background-color: #f8f8f8;} */
+tr:nth-child(odd) {background-color: #f8f0f8;}
