--- a/Cram/client/src/styles/navbar.module.css
+++ b/Cram/client/src/styles/navbar.module.css
@@ -2,16 +2,24 @@
     margin-left: 217px;
 } */
 
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .sidebar_nav {
     height: 100%;
     width: 228px;
     z-index: 1;
     top: 0;
     left: 0;
-    /* background-color: #1a1a1a; */
-    background-color: #830404;
+    background-color: #521568;
+    text-shadow: 2px 2px 1px rgb(58, 58, 58);
+    /* background-color: #830404; */
     overflow-x: hidden;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    /* font-family: Georgia !important; */
+    /* font-family: cursive; */
     padding: 20px;
 }
 
@@ -44,7 +52,7 @@
 
 .newNoteBtn {
     display: block;
-    background-color: #00a82d;
+    background-color: #792399;
     color: white;
     font-size: 25px;
     margin-top: 20px;
@@ -52,42 +60,13 @@
 }
 
 .newNoteBtn:hover {
-    background-color: #008f26
+    background-color: #b134df
 }
 
 .extra_navlinks {
     position: fixed;
     bottom: 30px;
 }
-
-/* table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th {
-    background-color: #f8f8f8;
-    border-bottom: 1px solid rgb(230 230 230);
-    color: rgb(188 188 188);
-    height: 37px;
-    font-size: 11px;
-    font-weight: 400;
-    line-height: 20px;
-}
-
-th, td {
-    text-align: left;
-}
-
-th {
-    padding: 0 5px
-}
-
-td {
-    padding: 8px;
-} */
-
-/* tr:nth-child(odd) {background-color: #f8f8f8;} */
 
 .usernameLabel {
     font-size: 18px;
