--- a/Cram/client/src/styles/auth.module.css
+++ b/Cram/client/src/styles/auth.module.css
@@ -1,12 +1,10 @@
-body {
+/* body {
     margin:0;
     padding:0;
-    overflow: hidden;
-    background-image: url("https://i.imgur.com/agZA72Z.jpg") !important;
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* background-size: 100px; */
-}
+    overflow: hidden !important;
+    background-image: url("https://i.imgur.com/5yo53e8.jpg") !important;
+    background-repeat: repeat !important;
+} */
 
 .centered {
     position: fixed;
@@ -15,33 +13,31 @@ body {
     transform: translate(-50%, -50%);
   }
 
-.form-wrapper {
+.form_wrapper {
     display: flex;
     background-color: white;
     margin-right: auto;
     margin-left: auto;
-    width: 314px;
+    width: 508px;
     padding: 55px 99px 55px 99px;
-    /* box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.295); */
-    box-shadow: 0px 10px 140px #c012ff85;
-    border-radius: 20px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.295);
 }
 
-.form-container {
+.form_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
 
 }
 
-.form-header {
+.form_header {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
 }
 
-.divider-container{
+.divider_container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,7 +74,7 @@ body {
     padding: 0px 21px 0px;
     border-radius: 7px;
     border: none;
-    background-color: #b238e0;
+    background-color: #00a82d;
     color: white;
     transition: filter 0.3s;
     font-size: 17px;
@@ -100,7 +96,6 @@ body {
     font-size: 11px;
     color: #cc5439;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    
 }
 
 .demo_button{
@@ -118,24 +113,21 @@ body {
     background-color: whitesmoke;
 }
 
-.header-title {
-    font-size: 105px;
-    color: rgb(58, 58, 58);
+.header_title {
+    font-size: 50px;
+    color: black;
     font-family: Geller serif;
     line-height: 0;
-    font-weight: 900;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
 
-.header-tagline {
+.header_tagline {
     font-size: 17px;
     color: #333333;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.form-footer {
+.form_footer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -143,36 +135,36 @@ body {
     color: #ababab;
 }
 
-.footer-tagline {
+.footer_tagline {
     font-size: normal;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.footer-cta-wrapper {
+.footer_cta_wrapper {
     margin-top: 8px;
 }
 
-.footer-cta {
+.footer_cta {
     font-size: 18px;
-    color: #b238e0;
+    color: #00a82d;
     text-decoration: none;
     font-weight: 400;
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.divider-container {
+.divider_container {
     position: relative;
     margin-bottom: 18px;
     margin-top: 17px;
 }
 
-.divider-container:before, .divider-container:after {
+.divider_container:before, .divider_container:after {
     display: table;
     content: "";
 }
 
-.divider-text {
+.divider_text {
     width: 100%;
     text-align: center;
     background-color: #ffffff;
@@ -184,16 +176,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.divider-container .divider-text:before {
+.divider_container .divider_text:before {
     margin-left: -52%;
     text-align: right;
 }
 
-.divider-container .divider-text:after {
+.divider_container .divider_text:after {
     margin-left: 2%;
 }
 
-.divider-container .divider-text:before, .divider-container .divider-text:after {
+.divider_container .divider_text:before, .divider_container .divider_text:after {
     width: 50%;
     top: 51%;
     overflow: hidden;
@@ -203,16 +195,16 @@ body {
     position: absolute;
 }
 
-.divider-container:after {
+.divider_container:after {
     clear: both;
 }
 
-.divider-container:before, .divider-container:after {
+.divider_container:before, .divider_container:after {
     display: table;
     content: "";
 }
 
-.divider-line {
+.divider_line {
     font-size: 75%;
     -webkit-font-smoothing: antialiased;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
