--- a/Cram/client/src/styles/deck.module.css
+++ b/Cram/client/src/styles/deck.module.css
@@ -1,17 +1,43 @@
 * {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+    text-decoration: none;
+}
+
+.decks_container {
+    /* height: 100%;
+    overflow: scroll !important; */
+}
+
+.hide {
+    display: none;
 }
 
 body {
     background-image: none;
 }
+
 main {
     padding: 30px;
     background-color: white;
 }
 
+.modal_wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(133, 133, 133, 0.5);
+    z-index: 9;
+    top: -1px;
+    right: -316px;
+}
+
 
 h1 {
+    display: block;
+    line-height: 0;
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 10px;
     font-size: 20px;
     color: rgb(51 51 51);
     font-weight: normal;
@@ -33,22 +59,24 @@ h2 {
 }
 
 button {
-    border: none;
-    background-color: white;
-    color: #792399;
-    font-size: 14px;
-    font-weight: 500;
+    /* border: none; */
+    /* background-color: white; */
+    /* color: #792399; */
+    /* font-size: 14px;
+    font-weight: 500; */
 }
 
 button:hover {
-    color: #b134df;
+    /* color: #b134df; */
 }
 
 table {
     margin-top: 13px;
-    border-top: 2px black solid;
+    border-top: 2px #c7c79e solid;
     width: 100%;
     border-collapse: collapse;
+    border-left: rgb(212, 212, 212) solid 1px;
+    border-right: rgb(212, 212, 212) solid 1px;
 }
 
 /* table {
@@ -57,10 +85,14 @@ table {
 } */
 
 th {
-    background-color: #f8e4f8;
-    border-bottom: 1px solid rgb(230 230 230);
+    /* background-color: black; */
+    background-image: url('https://i.imgur.com/agZA72Z.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom: 1px solid #c9c993;;
     /* color: rgb(188 188 188); */
-    color: rgb(48, 48, 48);
+    /* color: rgb(48, 48, 48); */
+    color: white;
     height: 37px;
     font-size: 11px;
     font-weight: 400;
@@ -72,12 +104,79 @@ th, td {
 }
 
 th {
-    padding: 0 5px
+    padding: 0 40px;
 }
 
 td {
-    padding: 8px;
+    padding: 40px;
 }
 
 /* tr:nth-child(odd) {background-color: #f8f8f8;} */
-tr:nth-child(odd) {background-color: #f8f0f8;}
+tr:nth-child(odd) {background-color: #ececd642;}
+
+.deck_title {
+    cursor: pointer;
+    width: 15%;
+}
+
+/* .deck_title:hover {
+    background-color: rgb(240, 237, 52);
+} */
+
+.deck_title_two {
+    cursor: pointer;
+    width: 15%;
+    padding: 40px;
+    text-decoration: none;
+}
+
+.deck_title_two_td {
+    padding: 0;
+    width: 15%;
+    text-decoration: none;
+}
+
+.deck_title_two_td a {
+    
+    color: black;
+}
+
+.deck_title_two_td a:hover {
+    
+    /* color: rgba(116, 116, 116, 0.781); */
+    color: rgb(128, 0, 0);
+}
+
+/* .deck_title_two:hover {
+    background-color: rgba(240, 237, 52, 0.151);
+    text-decoration: none;
+    
+} */
+
+.deck_progress {
+    width: 15%;
+}
+
+/* .deck_study_button {
+    font-size: 40px;
+    text-decoration: none !important;
+    color: rgb(128, 0, 0);
+} */
+
+.deck_study_button a {
+    font-size: 40px;
+    text-decoration: none !important;
+    color: rgb(128, 0, 0);
+}
+
+.deck_study_button a:hover {
+    color: rgb(202, 2, 2);
+}
+
+.edit_deck_icon {
+    cursor: pointer;
+}
+
+.edit_deck_icon:hover {
+    color: rgb(202, 2, 2);
+}
