--- a/Cram/client/src/styles/navbar.module.css
+++ b/Cram/client/src/styles/navbar.module.css
@@ -1,26 +1,29 @@
-/* main {
-    margin-left: 217px;
-} */
-
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: cursive !important;
 }
 
 .sidebar_nav {
     height: 100%;
-    width: 228px;
+    width: 300px;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #521568;
+    /* text-shadow: black 2px 2px 3px; */
+    /* background-image: url('https://wallpapercave.com/wp/k9fSCrK.jpg');
+    background-repeat: repeat;
+    background-size: cover;
+    filter: opacity(50%); */
+    /* background-color: rgba(255, 255, 255, 0.596); */
+    /* background-color: #521568; */
+    /* background-color: #451058; */
+    background: rgb(82,21,104);
+    background: radial-gradient(circle, rgb(82, 21, 104) 50%, rgb(62, 15, 78) 100%);
     text-shadow: 2px 2px 1px rgb(58, 58, 58);
-    /* background-color: #830404; */
-    overflow-x: hidden;
-    /* font-family: sans-serif; */
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
-    /* font-family: Georgia !important; */
-    /* font-family: cursive; */
-    padding: 20px;
+    padding: 10px 30px;
+    padding-right: 35px;
+    border-right: rgba(150, 150, 150, 0.527) solid 2px;
+    /* font-family: cursive !important; */
 }
 
 .sidebar_nav ul {
@@ -30,7 +33,7 @@
     margin-top: 30px;
 }
 
-.sidebar_nav a {
+/* .sidebar_nav a {
     color: #a6a6a6;
     text-decoration: none;
     font-size: 18px;
@@ -39,53 +42,185 @@
 
 .sidebar_nav a:hover {
     color: white;
+} */
+
+/* Log out */
+.logoutLabel {
+    background: none;
+    cursor: pointer;
+    /* margin: 8px;
+    margin-right: 18px; */
 }
 
-.usernameDropDown {
-    display: block;
+.logoutButton {
+    /* text-align: right; */
+    font-size: 13px;
+    cursor: pointer;
     border: none;
+    /* border-bottom: rgba(255, 255, 255, 0.164) dotted 2px;
+    border-right: rgba(255, 255, 255, 0.164) dotted 2px; */
+    /* box-shadow: none; */
+    /* border: rgba(255, 255, 255, 0.164) solid 1px; */
+    /* border-bottom: rgba(255, 255, 255, 0.164) solid 4px;
+    border-left: rgba(255, 255, 255, 0.164) solid 4px;
+    border-right: rgba(255, 255, 255, 0.164) solid 1px; */
+    /* border: rgba(255, 255, 255, 0.164) solid 2px;
+    border-left: none;
+    border-bottom: rgba(255, 255, 255, 0.11) solid 1px; */
+    border-radius: 5px;
     outline: none;
-    background-color: black;
+    background: none;
+    color: rgba(255, 255, 255, 0.658);
+    padding: 8px;
+    /* padding-left: 18px; */
+    letter-spacing: 1px;
+    font-weight: 100;
+    font-family: cursive;
+}
+
+.logoutButton:hover {
     color: white;
-    cursor: pointer;
+    text-shadow: black 2px 2px 3px;
+    background-color: rgba(255, 255, 255, 0.233);
 }
 
-.newNoteBtn {
-    display: block;
-    background-color: #792399;
-    color: white;
-    font-size: 25px;
-    margin-top: 20px;
-    cursor: pointer;
+.logoutButtonIcon {
+    /* position: relative;
+    right: 15px; */
+    margin-right: 10px;
+    font-size: 14px;
 }
 
-.newNoteBtn:hover {
-    background-color: #b134df
+/* User */
+.upper_wrapper {
+    /* background-color: rgba(255, 255, 255, 0.096); */
 }
 
-.extra_navlinks {
-    position: fixed;
-    bottom: 30px;
+.usernameWrapper {
+    text-align: center;
+    position: relative;
+    bottom: 20px;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; */
+}
+
+.usernameIcon {
+    margin-bottom: 5px;
+    margin-top: 10px;
+    color: rgba(255, 255, 255, 0.767);
+    font-size: 45px;
 }
 
 .usernameLabel {
     font-size: 18px;
-    color: white;
-    /* display: flex; */
+    color: rgba(255, 255, 255, 0.767);
+    /* text-shadow: black 3px 3px 3px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap !important;
+    margin-bottom: 16px;
 }
 
-.usernameLabelIcon {
-    font-size: 28px;
+/* User Info */
+.userInfo {
+    color: rgba(255, 255, 255, 0.658);
+    /* text-transform: uppercase; */
+    font-size: 15px;
+    border: rgba(255, 255, 255, 0.164) solid 1px;
+    /* border-bottom: rgba(255, 255, 255, 0.164) solid 4px;
+    border-left: rgba(255, 255, 255, 0.164) solid 4px;
+    border-right: rgba(255, 255, 255, 0.164) solid 1px; */
+    border-radius: 5px;
+    outline: none;
+    background: none;
+    /* color: rgba(255, 255, 255, 0.658); */
+    
+    padding: 8px;
 }
 
-.logoutButton {
+.userInfo a {
+    color: rgba(255, 255, 0, 0.781);
+    letter-spacing: 1px;
+    font-weight: 100;
+    /* font-family: cursive !important; */
+    text-decoration: none;
+}
+
+.userInfo a:hover {
+    color: rgb(255, 255, 0);
+    letter-spacing: 1px;
+    font-weight: 100;
+    /* font-family: cursive !important; */
+    text-decoration: none;
+}
+
+.deckLength {
     margin-right: 10px;
-    font-size: 18px;
-    cursor: pointer;
 }
 
-.usernameWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.dash {
+    color: rgba(255, 255, 255, 0.397);
 }
+
+.flashcardLength {
+    margin-left: 10px;
+}
+
+/*  */
+
+.lower {
+    position: fixed;
+    bottom: 30px;
+    /* top: 50%;
+    left: 50%; */
+    margin-left: 35px;
+    
+     /* Negative half of width. */
+}
+
+.extra_navlinks {
+    text-decoration: none;
+    text-align: center;
+}
+
+/* .navlink {
+    text-align: center;
+} */
+.extra_navlinks a {
+    text-decoration: none;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.658);
+}
+
+.newDeck {
+    /* text-align: center; */
+}
+
+.newDeck button {
+    box-shadow: rgba(0, 0, 0, 0.411) 2px 2px 4px;
+    font-size: 30px;
+    cursor: pointer;
+    /* border: rgba(255, 255, 255, 0.164) solid 2px; */
+    border: rgba(255, 255, 255, 0.164) solid 2px;
+    border-bottom: rgba(255, 255, 255, 0.164) solid 4px;
+    border-left: rgba(255, 255, 255, 0.164) solid 4px;
+    border-right: rgba(255, 255, 255, 0.164) solid 1px;
+    border-radius: 5px;
+    outline: none;
+    background: none;
+    color: rgba(255, 255, 255, 0.658);
+    padding: 25px;
+    width: 100%;
+    letter-spacing: 1px;
+    font-weight: 100;
+    /* font-family: cursive; */
+}
+
+.newDeck button:hover {
+    color: white;
+    /* background-color: rgba(255, 255, 255, 0.37); */
+    background-color: rgba(255, 255, 255, 0.233);
+}
+
